Revert "Shooting List: generate storyboard illustrations from shots via FLUX"
This reverts commit 3632feabb522a03a2ae3109fb442cd303ff2532c.
